--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseurl = "http://www.example.com"
-title = "Home"
+title = ""
 theme = "hugo-coder"
 languagecode = "en"
 defaultcontentlanguage = "en"
@@ -64,15 +64,5 @@ style = "github-dark"
   icon = "icon-codingame"
   weight = 3
   url = "https://www.codingame.com/profile/96e55fec026ca228f3237fd0e8e046899270025"
-
-# Menu links
-[[menu.main]]
-name = "Projects"
-weight = 3
-url = "projects/"
-[[menu.main]]
-  name = "About"
-  weight = 3
-  url = "about/"
 
 
